# curve_rag

./: Evaluation.ipynb  Example.ipynb  Existing Dataset.ipynb  Extract Hyperbolic Embeddings Example.ipynb  Graph Creation Example.ipynb  Hyperbolic Distance.ipynb  Hyperbolic Embeddings.ipynb  Pipeline Example.ipynb  Pipeline.ipynb  README.md  config.toml  pyproject.toml  run.py  train.py
KGEmb/: run.py
KGEmb/models/: base.py  complex.py  euclidean.py  hyperbolic.py
KGEmb/optimizers/: run2.py
KGEmb/utils/: train.py
curverag/: __init__.py  curverag.py  dataset.py  eval.py  evaluation.py  graph.py  hkg.py  hyperbolic_utils.py  main.py  prompts.py  transformations.py  utils.py
curverag/atth/: kg_dataset.py  run.py  train.py
curverag/atth/models/: hyperbolic.py
curverag/atth/optimizers/: kg_optimizer.py
curverag/atth/utils/: hyperbolic.py
