[project]
name = "curverag"
version = "0.1.0"
description = "Using hyperbolic KGs for RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "llama-cpp-python>=0.3.8",
    "notebook>=7.4.0",
    "outlines>=0.2.3",
    "semchunk>=3.2.1",
    "sentence-transformers>=4.0.1",
    "tiktoken>=0.9.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]
