[project]
name = "curverag"
version = "0.1.0"
description = "Using hyperbolic KGs for RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gliner>=0.2.19",
    "jupyter>=1.1.1",
    "llama-cpp-python>=0.3.8",
    "notebook>=7.4.0",
    "openai>=1.82.0",
    "outlines>=0.2.3",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "python-dotenv>=1.1.0",
    "semchunk>=3.2.1",
    "sentence-transformers>=4.0.1",
    "spacy>=3.8.7",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "transformers>=4.50.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
